# YOLOv8-TensorRT

./: .gitignore  GPU_test.sh  README.md  cpp_builder.run  cpp_builder.sh  cpp_infer.run  cpp_infer.sh  export-det_quant.py  export-det_quant_all.py  requirements.txt  yolov8
csrc/detect/end2end/: CMakeLists.txt  main_textoutput.cpp  main_time.cpp
models/: engine.py
